--- a/github 3@C/style.css
+++ b/github 3@C/style.css
@@ -120,7 +120,6 @@ label{
 background-color: var(--fundo-senha);
 height: 30px;
 width: 100%;
-border: 1px solid var(--borda);
 }
 .fraca{
 height: 30px;
@@ -128,6 +127,9 @@ width: 25%;
 background-color: #E71B32;
 position: relative;
 bottom: 30px;
+}
+.parametro-senha-textos{
+    display: flex;
 }
 
 
