--- a/github 3@C/style.css
+++ b/github 3@C/style.css
@@ -121,13 +121,24 @@ background-color: var(--fundo-senha);
 height: 30px;
 width: 100%;
 }
+.forca{
+    height: 30px;
+    position: relative;
+    bottom: 30px;
+}
 .fraca{
-height: 30px;
 width: 25%;
 background-color: #E71B32;
-position: relative;
-bottom: 30px;
 }
+.media{
+    background-color: #FAF408;
+    width: 50%;
+}
+.forte{
+    background-color: #00ff85;
+    width: 100%;
+}
+
 .parametro-senha-textos{
     display: flex;
         justify-content: space-between;
